--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!--CSS Projeto-->
-    <link rel="stylesheet" href="https://dralker.github.io/Template-Imoveis/style.css">
+    <link rel="stylesheet" href="https://felpsoliverteix.github.io/Template-Imoveis/style.css">
     <title>Template-Imoveis</title>
 </head>
 <body>
